Bug 601142: useless horizontal scrollbar always visible on show_bug.cgi in Classic skin r=LpSolit, a=LpSolit

--- a/skins/standard/show_bug.css
+++ b/skins/standard/show_bug.css
@@ -113,3 +113,6 @@ table#flags {
 .text_input, .bz_userfield, #keyword_container {
     width: 100%;
 }
+.bz_bug .bz_alias_short_desc_container {
+    width: inherit;
+}
